tests/bad/1.sm
# Missing stuff...
(module 1 (